...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".List.ListActivity">

    <AutoCompleteTextView
        android:id="@+id/search_bar"
        android:layout_width="218dp"
        android:layout_height="45dp"
        android:hint="Type animals here..."
        android:inputType="textCapWords"
        android:textSize="24dp"
        android:completionThreshold="0"
...
        app:layout_constraintHorizontal_bias="0.103"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.802" />

    <Button
        android:id="@+id/search_select_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:onClick="onSearchSelectClick"
        android:text="Select"
        app:layout_constraintBottom_toTopOf="@+id/search_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.797"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.939" />
...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="669dp" />

    <Button
        android:id="@+id/generate_plan_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Generate Plan"
        android:onClick="onGeneratePlanClick"
        app:layout_constraintBottom_toTopOf="@+id/plan_button_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/scrollview_guideline"
...
