...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/previous_guideline"
        app:layout_constraintVertical_bias="0.384" />

    <Button
        android:id="@+id/next_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onNextClicked"
        android:text="Next"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/next_guideline"
...
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/directions_guideline"
        app:layout_constraintVertical_bias="0.838" />

    <TextView
        android:id="@+id/place_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="temp"
        android:textSize="30dp"
        android:textStyle="bold"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/title_guideline">

        <TextView
            android:id="@+id/directions_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:lineSpacingExtra="5dp"
            android:text="Lets Get Started!"
            android:textSize="16dp"
            app:layout_constraintBottom_toTopOf="@+id/directions_guideline"
...
