<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item android:id="@+id/clear_option"
        android:visible="true"
        android:title="Clear Information"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/mock_location"
        android:visible="false"
        android:title="Mock Location"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item android:id="@+id/directions_detail"
        android:visible="false"
        android:title="Directions Detail"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item android:id="@+id/skip_exhibit"
        android:visible="false"
        android:title="Skip Destination"
        android:orderInCategory="100"
        app:showAsAction="never"/>
</menu>